	(tnt-read-string-with-default): added
	(tnt-join-chat): changed to use tnt-read-sting-with-default so
	that you simply press enter to use the default chatroom name or
	type in a new name much like you would do with a buffer kill or
	switch.  The reason is that with a random name, it's unlikely
	that the user will want to change it without completely removing
	it.

2001-03-09  NeilFred Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-html-tags-to-strip): added.
	(tnt-html-regexps-to-replace): renamed, removed the part that got
	moved into tags-to-strip.
	(tnt-add-html-tag-to-strip): added.
	(tnt-add-html-regexp-to-replace): added.
	(tnt-reformat-text): calling strip-some-html once for the
	tags-to-strip, and then doing the old call to reduce for
	regexps-to-replace.  

2001-02-19   <jdaniel@mit.edu>

	* tnt.el (tnt-send-idle): Added a call to 
	(add-hook 'pre-command-hook 'tnt-send-unidle).  pre-command-hook is 
	called before every user-command which makes the unidle-timer
	unnecessary.  I think buggy emacs versions still keep tnt-send-idle 
	from being called when it should, but no longer cause spurious calls 
	to tnt-send-unidle.
	(tnt-send-unidle): Added call to remove-hook the hook added by 
	tnt-send-idle
	(tnt-use-idle-timer): Removed check for tnt-buggy-idle and the note 
	about buggy emacs versions
	(tnt-buggy-idle): Removed
	(tnt-unidle-timer): Removed
	(tnt-send-unidle-after): Removed
	(tnt-shutdown): Swapped unidle-timer stuff with a call to remove-hook
	(tnt-handle-sign-on): Removed call to start tnt-unidle-timer
	(tnt-test-for-buggy-idle): Removed

2001-02-12  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-html-regexps): now stripping out <PRE> tags 

2001-01-28    <tntdevel@brokendreams.net>

	* tnt.el (tnt-pounce-delete): Added a message when deleting an 
	existing pounce message.

2001-01-16    <tntdevel@brokendreams.net>

	* tnt.el (tnt-set-buddy-status): Added messages when a user sets